Kubernetes Manifest/node_exporter.yml
apiVersion: apps/v1
kind: DaemonSet

metadata:
  name: node-exporter
  namespace: kube-system
  
spec:
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      hostNetwork: true
      containers:
        - name: node-exporter
          image: prom/node-exporter
          ports:
            - containerPort: 9100
              hostPort: 9100
              name: metrics
