Kubernetes Manifest/kube-state-metrics-nodeport.yml
apiVersion: v1
kind: Service

metadata:
  name: kube-state-metrics-nodeport
  namespace: kube-system
  
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: kube-state-metrics
  ports:
    - name: http-metrics
      port: 8080
      targetPort: 8080
      nodePort: 30080
