Kubernetes Manifest/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: notes-ingress
  namespace: notes-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notes-client
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: notes-server
                port:
                  number: 5000
